--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
 * {
     margin: 0px;
     padding: 0px;
+
+}
+
+body {
+    font-size: 27px;
+    background-color: #90EE90;
+    padding-bottom: 50px;
 }
 
 div {
     background-color: #008080;
-    height: 100px;
+    height: 165px;
 }
 
 div h1 {
@@ -19,9 +26,62 @@ div h2 {
     color: #FFFFFF;
 }
 
-div a {
+div li {
+    list-style: none;
+    display: inline-block;
     margin-left: 10px;
+    position: relative;
+    bottom: -12px;
+}
+
+div li a {
+    margin-left: 5px;
     text-decoration: none;
     text-align: center;
     color: #FFFFFF;
+}
+
+section {
+    margin-left: 270px;
+    margin-right: 270px;
+    background-color: #80CBC4;
+}
+
+section h2 {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+section p {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+section article h2 {
+    background-color: #B2DFDB;
+    margin-left: 25px;
+    margin-right: 25px;
+}
+
+section article figure {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+section article figure img {
+    width: 783px;
+    height: 400px;
+}
+
+footer {
+    background-color: #008080;
+    height: 50px;
+}
+
+footer p {
+    text-align: center;
+    top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
 }
