--- a/style.css
+++ b/style.css
@@ -4,10 +4,15 @@
 
 }
 
+@viewport {
+    zoom: 1.0;
+    width: extend-to-zoom;
+}
+
 body {
     font-size: 27px;
     background-color: #90EE90;
-    padding-bottom: 50px;
+    padding-bottom: 3%;
 }
 
 div {
